5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4429/executions/1764_674.log
== TEST (2019-05-31 00:52:22) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
vetor=(array(eval(input(["digite o vetor: "]))))
print(size(vetor))

print(max(vetor))
print(min(vetor))
print(sum(vetor))
print(sum/size(vetor))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 00:53:06) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
vetor=(array(eval(input("digite o vetor: "[]))))
print(size(vetor))

print(max(vetor))
print(min(vetor))
print(sum(vetor))
print(sum/size(vetor))
-- ERROR:
File "XXXX", line 4
    vetor=(array(eval(input("digite o vetor: "[]))))
                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 00:53:49) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
vetor=(array(eval(input("digite o vetor: "))))
print(size(vetor))

print(max(vetor))
print(min(vetor))
print(sum(vetor))
print(sum/size(vetor))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 00:54:16) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
vetor=(array(eval(input("digite o vetor: "))))
print(size(vetor))
print(max(vetor))
print(min(vetor))
print(sum(vetor))
print(sum/size(vetor))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 00:55:07) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
vetor=(array(eval(input("digite o vetor: "))))
print(size(vetor))
print(max(vetor))
print(min(vetor))
print(sum(vetor))
print(sum/size(vetor))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 00:55:44) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
vetor=(array(eval(input("digite o vetor: "))))
print(size(vetor))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 00:57:40) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
vetor=(input(array("digite o vetor: ")))
print(size(vetor))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 00:59:21) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
vetor1=(input(array(["digite o vetor: "])))
print(size(vetor))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 00:59:38) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
vetor1=(input(array([])))
print(size(vetor))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 00:59:59) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
vetor1=(input(array([,,,,,])))
print(size(vetor))

-- ERROR:
File "XXXX", line 4
    vetor1=(input(array([,,,,,])))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 01:00:42) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
vetor1=(input(eval(array([,,,,,])))
print(size(vetor))

-- ERROR:
File "XXXX", line 4
    vetor1=(input(eval(array([,,,,,])))
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 01:00:49) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
vetor1=(input(eval(array([])))
print(size(vetor))

-- ERROR:
File "XXXX", line 5
    print(size(vetor))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 01:02:28) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
vetor1=(input(eval(array([0,5])))
print(vet)
print(size(vetor))
		 

-- ERROR:
File "XXXX", line 5
    print(vet)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 01:02:39) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
vetor1=(input(eval(array([0,5])))
print(vetor)
print(size(vetor))
		 

-- ERROR:
File "XXXX", line 5
    print(vetor)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 01:02:49) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
vetor=(input(eval(array([0,5])))
print(vetor)
print(size(vetor))
		 

-- ERROR:
File "XXXX", line 5
    print(vetor)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 01:04:06) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
vetor=(input(eval(array([],[],[],[],[])))
print(vetor)
print(size(vetor))
		 

-- ERROR:
File "XXXX", line 5
    print(vetor)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 01:04:18) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
vetor=(input(eval(array([],[],[],[],[])))
print(size(vetor))
		 

-- ERROR:
File "XXXX", line 5
    print(size(vetor))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 01:04:30) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
vetor=int(input(eval(array([],[],[],[],[])))
print(size(vetor))
		 

-- ERROR:
File "XXXX", line 5
    print(size(vetor))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 01:04:57) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
vetor=(input(eval(array([],[],[],[],[]))))
print(size(vetor))
		 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 01:05:46) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
vetor=(input(eval(array([[]],[[]],[[]],[[]],[[]]))))
print(size(vetor))
		 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 01:08:47) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
vetor=array([20,30,40])
print(vetor)

		 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 01:09:15) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
vetor=input array([,,])
print(vetor)

		 

-- ERROR:
File "XXXX", line 4
    vetor=input array([,,])
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 01:09:26) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
vetor=input(array([,,]))
print(vetor)

		 

-- ERROR:
File "XXXX", line 4
    vetor=input(array([,,]))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 01:10:24) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
vetor=array(eval(input([,,]))
print(vetor)

		 

-- ERROR:
File "XXXX", line 4
    vetor=array(eval(input([,,]))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 01:11:54) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
vetor=array(eval(input([]))
print(vetor)

		 

-- ERROR:
File "XXXX", line 5
    print(vetor)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 01:12:18) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
vetor=array(eval(input([])))
print(vetor)

		 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 01:13:58) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
vetor=array([20,10,50,40,30])
print(vetor)

		 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 01:14:28) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
vetor=array([20,10,50,40,30])
print(vetor)
print(size(vetor))

		 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 01:22:02) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
vetor=array([20,10,50,40,30])
print(vetor)
print(size(vetor))
print(len(vetor))


		 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
